--- a/packages/backend/tsconfig.json
+++ b/packages/backend/tsconfig.json
@@ -19,6 +19,6 @@
     "skipLibCheck": true,
     "noEmit": true
   },
-  "include": ["./**/*"],
-  "exclude": ["./_generated"]
+  "include": ["."],
+  "exclude": ["./convex/_generated"]
 }
