--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,7 @@
 {
-  "compilerOptions": {},
+  "compilerOptions": {
+    "declaration": true,
+    "declarationMap": true
+  },
   "extends": "expo/tsconfig.base"
 }
