--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,7 +13,7 @@
     "@clerk/nextjs": "^4.29.1",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.1.1",
-    "@packages/backend": "*",
+    "@packages/backend": "workspace:*",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
@@ -22,7 +22,9 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^2.2.0"
+    "tailwind-merge": "^2.2.0",
+    "convex": "^1.8.0",
+    "clsx": "^2.1.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
